TensorFlow_logs/logs_nest_test_nest/log40.log
2020-10-05 21:01:16.067424: I tensorflow/stream_executor/platform/default/dso_loader.cc:44] Successfully opened dynamic library cudart64_100.dll
Traceback (most recent call last):
  File "nest_test.py", line 50, in <module>
    from tensorflow.python.data.util import nest
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow\__init__.py", line 99, in <module>
    from tensorflow_core import *
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\__init__.py", line 28, in <module>
    from tensorflow.python import pywrap_tensorflow  # pylint: disable=unused-import
  File "<frozen importlib._bootstrap>", line 1007, in _handle_fromlist
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow\__init__.py", line 50, in __getattr__
    module = self._load()
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow\__init__.py", line 44, in _load
    module = _importlib.import_module(self.__name__)
  File "C:\ProgramData\Anaconda3\envs\keras\lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\__init__.py", line 73, in <module>
    from tensorflow.python.ops.standard_ops import *
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\ops\standard_ops.py", line 25, in <module>
    from tensorflow.python import autograph
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\__init__.py", line 35, in <module>
    from tensorflow.python.autograph import operators
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\__init__.py", line 35, in <module>
    from tensorflow.python.autograph import operators
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\operators\__init__.py", line 40, in <module>
    from tensorflow.python.autograph.operators.control_flow import for_stmt
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\operators\control_flow.py", line 65, in <module>
    from tensorflow.python.autograph.operators import py_builtins
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\autograph\operators\py_builtins.py", line 30, in <module>
    from tensorflow.python.data.ops import dataset_ops
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\data\__init__.py", line 25, in <module>
    from tensorflow.python.data import experimental
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\data\experimental\__init__.py", line 89, in <module>
    from tensorflow.python.data.experimental.ops.batching import dense_to_sparse_batch
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\data\experimental\ops\batching.py", line 20, in <module>
    from tensorflow.python.data.ops import dataset_ops
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\data\ops\dataset_ops.py", line 39, in <module>
    from tensorflow.python.data.ops import iterator_ops
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\data\ops\iterator_ops.py", line 23, in <module>
    from tensorflow.python.data.ops import optional_ops
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\data\ops\optional_ops.py", line 24, in <module>
    from tensorflow.python.data.util import structure
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\data\util\structure.py", line 25, in <module>
    from tensorflow.python.data.util import nest
  File "C:\ProgramData\Anaconda3\envs\keras\lib\site-packages\tensorflow_core\python\data\util\nest.py", line 241
    flat_structure = [flatten(s) for s not in structure]
                                         ^
SyntaxError: invalid syntax
